--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My second repo</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <p>Hello World!</p>
+    <h1>I can push to github</h1>
+    <h2>Mama I can code now</h2>
 </body>
 </html>
