--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My second repo</title>
+    <style>
+        p{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
     <p>Hello World!</p>
     <h1>I can push to github</h1>
     <h2>Mama I can code now</h2>
+    <h3>New code changed</h3>
+    
 </body>
 </html>
